--- a/data-mining/mini-project/analysis.ipynb
+++ b/data-mining/mini-project/analysis.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -166,6 +168,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Формули\n",
+    "\n",
+    "### Средно-аритметична стойност\n",
+    "\n",
+    "За намирането на средно-аритметичната стойност се използва формула (2.3) от Лекция 2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -180,6 +193,16 @@
     "    counts = series.value_counts().to_dict().items()\n",
     "    sum = reduce(lambda acc, x: acc + get_interval_mean(x[0]) * x[1], counts, 0)\n",
     "    return sum / series.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Медиана, Q1 и Q3\n",
+    "\n",
+    "За апроксимирането на медианата се използва формула (2.4) от Лекция 2.\n",
+    "Тя е адаптирана и за намирането на Q1 и Q3, като е обобщена да намира посочен квантил."
    ]
   },
   {
@@ -203,6 +226,15 @@
     "    group_size = cumsum[group_key] - previous_cumsum\n",
     "    \n",
     "    return L + (N - previous_cumsum) * ((H - L) / group_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Мода\n",
+    "\n",
+    "За апроксимирането на модата на данните се използва формула (2.5) от Лекция 2."
    ]
   },
   {
@@ -704,6 +736,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Анализ на среден размер на тумора\n",
+    "\n",
+    "От трите boxplot графики, наредени една до друга се забелязва по-съсредоточено разпределение на данни около медианата във втората графика Tumor Size Recurrence, където са всички жени, при които се наблюдава болестта повторно.\n",
+    "\n",
+    "Първата и третата графика имат сходна структура с по-разпръснати наблюдения, тоест по-голям интервал между Xmin и Xmax."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -714,6 +757,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Проверете, има ли зависимост между възрастта на заболелите жени и размера на тумора.\n",
+    "\n",
+    "### 1. Чрез построяване на графика на разсейване (scatter plot)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -721,7 +774,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f12eedb5be0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f474b2459b0>"
       ]
      },
      "execution_count": 24,
@@ -742,6 +795,8 @@
     }
    ],
    "source": [
+    "# 1) За всички жени, заболели от рак\n",
+    "\n",
     "df.plot.scatter(x='mean-age', y='mean-tumor')"
    ]
   },
@@ -753,7 +808,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f12eed2f550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f474b166940>"
       ]
      },
      "execution_count": 25,
@@ -774,6 +829,8 @@
     }
    ],
    "source": [
+    "# 2) Само за жени, за които е забелязано повтаряне на рака след проведената операция.\n",
+    "\n",
     "df[df['class'] == ' recurrence-events'].plot.scatter(x='mean-age', y='mean-tumor')"
    ]
   },
@@ -785,7 +842,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f12eed1a320>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f474b152eb8>"
       ]
      },
      "execution_count": 26,
@@ -806,7 +863,27 @@
     }
    ],
    "source": [
+    "# 3) Само за жени, за които не е забелязано повтаряне на рака след отстраняване на тумора.\n",
+    "\n",
     "df[df['class'] == ' no-recurrence-events'].plot.scatter(x='mean-age', y='mean-tumor')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Анализ на графики на разсейване (scatter plot)\n",
+    "\n",
+    "Първата и третата графика на разсейване не се отличават една от друга много. Това са цялата група от жени болни от рак и съответно групата от жени, при които не се е наблюдавал рак повторно.\n",
+    "\n",
+    "Интересна е втората графика, при която има само жени с повторно наблюдаване на заболяването, където размерът на тумора и възрастта на жените имат лека корелация. Тоест при по-възрастни жени, се наблюдава по-голям размер на тумора."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Чрез изчисляване на коефициента на корелация между двете променливи. "
    ]
   },
   {
@@ -866,6 +943,8 @@
     }
    ],
    "source": [
+    "# 1) За всички жени, заболели от рак\n",
+    "\n",
     "df[['mean-age', 'mean-tumor']].corr()"
    ]
   },
@@ -926,6 +1005,8 @@
     }
    ],
    "source": [
+    "# 2) Само за жени, за които е забелязано повтаряне на рака след проведената операция.\n",
+    "\n",
     "df[['mean-age', 'mean-tumor']][df['class'] == ' recurrence-events'].corr()"
    ]
   },
@@ -986,7 +1067,20 @@
     }
    ],
    "source": [
+    "# 3) Само за жени, да които не е забелязано повтаряне на рака след отстраняване на тумора.\n",
+    "\n",
     "df[['mean-age', 'mean-tumor']][df['class'] == ' no-recurrence-events'].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Анализ на коефициенти на корелация между възраст и размер на тумор\n",
+    "\n",
+    "При цялата група от жени с рак и при групата от жени без повторно наблюдаване на болестта не се забелязва корелация, защото тя е много близко до нулата.\n",
+    "\n",
+    "Само при втората група от жени, при които заболяването отново се е проявило, се забелязва по-силна корелация между възраст и размер на тумора. Тоест по-възрастните жени имат по-голям размер на тумора, което значи, че туморът е имал повече време да се развие."
    ]
   }
  ],
