--- a/text-mining/TM_lab08_MLP_Reg.ipynb
+++ b/text-mining/TM_lab08_MLP_Reg.ipynb
@@ -8,6 +8,9 @@
    },
    "source": [
     "# Text mining \n",
+    "\n",
+    "## Anton Petkov, 25915, Sofia University\n",
+    "\n",
     "## Lab 08 Multi-Layer Perceptron on Reuters with reguarization techniques\n",
     "\n",
     "We are going to train a Neural Network to predict the origin of a document coming from the 20newsgroup dataset.\n",
@@ -543,6 +546,44 @@
     "    final_test_acc = history['acc'][1][-1]\n",
     "    print('Final test loss: {}'.format(final_test_loss))\n",
     "    print('Final test accuracy: {}'.format(final_test_acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experiments\n",
+    "\n",
+    "#### All experiments were carried out with the following parameters set to:\n",
+    "* `batch_size` = 32\n",
+    "* `max_epochs` = 100\n",
+    "* `max_features` = 1000\n",
+    "* `learning_rate` = 0.03\n",
+    "* `reg_param` = 0.03\n",
+    "* `dropout_keep_prob` = 0.9\n",
+    "* `seed` = 42\n",
+    "\n",
+    "The number of neurons in each layer is 128.\n",
+    "\n",
+    "A grid search on all these parameters would be too big, so we emphasize on Layer Count, using L2 Regularization, using Dropout or using Early Stopping.\n",
+    "\n",
+    "## Table with results\n",
+    "| Experiment # | Layer count | L2 Regularization | Dropout | Early Stopping | Accuracy | Loss | Comment |\n",
+    "|-|-|-|-|-|-|-|-|\n",
+    "| 1 | 2 | yes | no | no | 0.2493 | 2.8602 |  |\n",
+    "| 2 | 2 | no | yes | no | 0.0426 | NaN | gradient exploded|\n",
+    "| 3 | 2 | no | no | yes | 0.6279 | 1.7183 | stopped at first epoch with patience 1 (also with patience 3) |\n",
+    "| 4 | 2 | yes | yes | no | 0.1251 | 2.8817 |  |\n",
+    "| 5 | 3 | no | yes | yes | **0.6480** | **1.5360** | best result |\n",
+    "| 6 | 3 | yes | no | yes | 0.1225 | 2.8889 | stopped at epoch 10 |\n",
+    "| 7 | 3 | yes | yes | yes | 0.0528 | 2.9902 |  |\n",
+    "\n",
+    "## Analysis\n",
+    "\n",
+    "* Early Stopping is very efficient, because it is computationally cheaper than Dropout and L2 Regularization and also early stopping doesn't modify the model itself. Thus, it is simpler than Dropout and L2.\n",
+    "* I expected better results with L2, but it has a very low accuracy score and even after 100 epochs the loss doesn't seem to improve.\n",
+    "* The best result is in bold and uses Early Stopping and Dropout with 3 layers.\n",
+    "* Each experiment has a graph with the loss and accuracy plotted for each epoch for both test and train datasets."
    ]
   },
   {
